tests/snapshots/integration__integration_tests__list__readme_example_simple_list.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m     [1mStatus[0m         [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m              [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m   [1mMessage[0m
@ [1mmain[0m           [2m^[22m                          [1m./repo[0m             [32m⇡0[0m  [2m[31m⇣0[0m  [2mb834638e[0m  [2m1d[0m    [2mInitial commit[0m
+ feature-x  [36m+[39m   [2m↑[22m        [32m+5[0m        [32m↑3[0m      ./repo.feature-x           [2m6bba16d6[0m  [2m1h[0m    [2mAdd file 3[0m
+ bugfix-y       [2m↑[22m                  [32m↑1[0m      ./repo.bugfix-y            [2mbafa4cbd[0m  [2m2h[0m    [2mFix bug[0m

⚪ [2mShowing 3 worktrees, 1 with changes, 2 ahead[0m
