tests/snapshots/integration__integration_tests__list__task_dag_full_with_diffs.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--progressive"
    - "--full"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m     [1mStatus[0m         [1mHEAD±[0m    [1mmain↕[0m     [1mmain…±[0m  [1mPath[0m              [1mRemote⇅[0m  [1mCI[0m  [1mCommit[0m    [1mAge[0m   [1mMessage[0m
@ [1mmain[0m           [2m^[22m                                     [1m./repo[0m                         [2mb834638e[0m  [2m1d[0m    [2mInitial commit[0m
+ [2mfeature-a[0m    [36m?[39m[2m·[22m                                      [2m./repo.feature-a[0m               [2mb834638e[0m  [2m1d[0m    [2mInitial commit[0m
+ feature-b      [2m↑[22m                  [32m↑1[0m        [32m+1[0m   [31m-1[0m  ./repo.feature-b               [2m2d37ca75[0m  [2m1d[0m    [2mTest commit[0m

⚪ [2mShowing 3 worktrees, 1 ahead[0m
